# hxforge-agent

./: .gitignore  .task015-followup-scaffold  AGENTS.md  Dockerfile  README.md  ci-shard-manifest.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: calculation_bug.yml  engineering_feature.yml
.github/workflows/: ci.yml  nightly.yml  task-015-spec-validation.yml
benchmarks/cases/: task-011-corpus-source.json  task011_case_01.json  task011_case_02.json  task011_case_03.json  task011_case_04.json  task011_case_05.json  task011_case_06.json  task011_case_07.json  task011_case_08.json  task011_case_09.json  task011_case_10.json  task011_case_11.json  task011_case_12.json  task011_case_13.json  task011_case_14.json  task011_case_15.json  task011_case_16.json  task011_case_17.json  task011_case_18.json  task011_case_19.json  task011_case_20.json
benchmarks/manifests/: task-011-approved-manifest.json
docs/: ARCHITECTURE.md  BASELINE_CASES.md  CALCULATION_PROVENANCE.md  CORRELATIONS.md  CORRELATION_REGISTRY.md  DECISION_LOG.md  DESIGN_CASE_REVISIONS.md  DEVELOPMENT_WORKFLOW.md  DOUBLE_PIPE_RATING.md  ENGINEERING_GLOSSARY.md  GITHUB_ROADMAP.md  HEAT_BALANCE.md  INPUT_OUTPUT_DICTIONARY.md  MASTER_DEVELOPMENT_SPEC.md  PRODUCT_REQUIREMENTS.md  PROPERTY_BACKENDS.md  TASK_BACKLOG.md  UNITS.md  WORKFLOW_MATRIX.md
docs/governance/: ci_pipeline_spec.yaml  failure_taxonomy.yaml  release_spec.yaml  security_gate_spec.yaml
docs/reviews/: TASK-001-engineering-review-02.md  TASK-001-engineering-review-03.md  TASK-001-final-approval.md  TASK-002-engineering-review-01.md  TASK-002-engineering-review-02.md  TASK-002-final-approval.md  TASK-003-engineering-review-01.md  TASK-003-engineering-review-02.md  TASK-003-engineering-review-03.md  TASK-003-engineering-review-04.md  TASK-003-final-approval.md  TASK-004-engineering-review-01.md  TASK-004-engineering-review-02.md  TASK-004-engineering-review-03.md  TASK-004-engineering-review-04.md  TASK-005-engineering-review-01.md  TASK-005-engineering-review-02.md  TASK-005-engineering-review-03.md  TASK-005-engineering-review-04.md  TASK-005-engineering-review-05.md  TASK-006-engineering-review-01.md  TASK-006-engineering-review-02.md  TASK-006-engineering-review-03.md  TASK-006-engineering-review-05.md
docs/tasks/: .task-006-plan  README.md  TASK-000-project-bootstrap.md  TASK-001-engineering-baseline.md  TASK-001-execution-plan.md  TASK-002-units-and-quantities.md  TASK-003-property-service.md  TASK-004-correlation-registry.md  TASK-004-design-case-revisions.md  TASK-005-correlation-registry.md  TASK-005-provenance-and-errors.md  TASK-006-heat-balance.md  TASK-007-double-pipe-correlations.md  TASK-007-tube-annulus-correlations.md  TASK-008-double-pipe-rating.md  TASK-009-double-pipe-sizing.md  TASK-009-manufacturable-sizing-and-candidate-optimization.md  TASK-009-phase-3-feasibility-ranking-and-top-n-contract.md  TASK-010-MERGE-CLOSEOUT.md  TASK-010-report-and-api.md  TASK-011-benchmark-case-governance.md  (+21 more)
examples/: water_water_double_pipe.json
scripts/: run_task015_spec_validation.py  run_task016_alpha_preview_case.py
tests/: __init__.py  conftest.py
(+433 files in other folders)
