[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "heat-exchanger-design-agent"
version = "0.1.0"
description = "Deterministic engineering kernel and agent orchestration scaffold for heat exchanger design"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "numpy>=2.0",
  "scipy>=1.14",
  "pint>=0.24",
  "coolprop>=7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "hypothesis>=6.112",
  "ruff>=0.8",
  "mypy>=1.13",
  "httpx>=0.27",
  "pip-audit>=2.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hexagent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/hexagent/optimization/phase3_*.py" = [
    "E501",  # line-too-long — contract code uses compact style
    "E701",  # multiple-statements-on-one-line-semicolon — contract pattern
    "E702",  # multiple-statements-on-one-line — contract pattern
    "SIM102", # collapsible-if — contract uses nested if for clarity
    "B905",  # zip-without-explicit-strict — contract pattern
    "B007",  # unused-loop-control-variable — contract pattern
    "E402",  # module-level-import-not-at-top — circular import resolution in phase3_builder
]
"tests/unit/test_task009_phase3.py" = [
    "E501",  # line-too-long — test patterns with long defaults
    "F841",  # unused-variable — helper fixtures may have unused assignments during refactor
]

[tool.mypy]
strict = true
packages = ["hexagent"]

[[tool.mypy.overrides]]
module = ["CoolProp", "CoolProp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["scipy", "scipy.*"]
ignore_missing_imports = true
